# loreal_dobot

./: .gitignore  README.md
barcode_detector/: CMakeLists.txt  package.xml
barcode_detector/scripts/: d405_yolo_barcode_node3_pt_flex.py  d405_yolo_barcode_node3_pt_flex_filtered.py  d405_yolo_barcode_node3_pt_flex_lowglare.py  d405_yolo_barcode_node3_pt_flex_lowglare_panel.py  d405_yolo_barcode_node3_pt_flex_native.py  d405_yolo_pt_common.py  d405_yolo_pt_common_lowglare.py  d405_yolo_pt_common_lowglare_panel.py  d405_yolo_pt_common_native.py  pt_to_onnx.py  pt_to_onnx960.py  pt_to_onnx_cv.py  requirment.txt  test_yolo.py  vision_panel_viewer.py  yolo_zbar_node.py  yolo_zbar_node1.py
barcode_detector/src/: barcode_node.cpp  barcode_node1.cpp  barcode_node2.cpp  barcode_node3.cpp  barcode_node4.cpp  barcode_node5.cpp  d405_yolo_barcode_node.cpp  d405_yolo_barcode_node1.cpp  d405_yolo_barcode_node2.cpp  d405_yolo_barcode_node3.cpp  d405_yolo_barcode_node3_onnx_flex.cpp  d405_yolo_barcode_node3_onnx_flex_filtered.cpp  d405_yolo_barcode_node4.cpp  yolo_barcode_node.cpp
dobot_nova5_driver/: README.md  package.xml  setup.cfg  setup.py
dobot_nova5_driver/dobot_nova5_driver/: __init__.py  controller copy.py  controller.py  dobot_dh_api.py  nova5_driver_node copy.py  nova5_driver_node.py  nova5_driver_node1.py  nova5_driver_node2.py  nova5_driver_node3 copy.py  nova5_driver_node3.py  nova5_driver_node3_ack.py  nova5_driver_node3_dh_gripper.py  nova5_driver_node3_dh_gripper_coarse_lock.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined copy.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined_belt_edge_singulation.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined_dual_arm copy.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined_dual_arm.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined_dual_arm_secondary_joint.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined_dual_arm_secondary_joint_barcode_flip.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined_dual_arm_secondary_joint_barcode_flip_polygon.py  nova5_driver_node3_dh_gripper_coarse_lock_post_place_motion_profile_user_defined_guided_singulation.py  (+3 more)
(+46 files in other folders)
